--- a/changelog/unreleased/kong/add_tzdata.yml
+++ b/changelog/unreleased/kong/add_tzdata.yml
@@ -1,3 +1,3 @@
 message: |
-  Add package `tzdata` to DEB Docker image for accurate timezone setting.
+  Add package `tzdata` to DEB Docker image for convenient timezone setting.
 type: dependency
