--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -270,9 +270,9 @@ plugins/exit-transformer:
 - changed-files:
   - any-glob-to-any-file: kong/plugins/exit-transformer/**/*
 
-plugins-ee/forward-proxy:
+plugins/forward-proxy:
 - changed-files:
-  - any-glob-to-any-file: plugins-ee/forward-proxy/**/*
+  - any-glob-to-any-file: kong/plugins/forward-proxy/**/*
 
 plugins-ee/graphql-proxy-cache-advanced:
 - changed-files:
