--- a/changelog/unreleased/kong/fix-snis-tls-passthrough-in-trad-compat.yml
+++ b/changelog/unreleased/kong/fix-snis-tls-passthrough-in-trad-compat.yml
@@ -1,5 +1,5 @@
 message: |
-  fix an issue where SNI-based routing does not work
+  Fixed an issue where SNI-based routing does not work
   using tls_passthrough and the traditional_compatible router flavor
 type: bugfix
 scope: Core
