--- a/CHANGELOG/unreleased/kong/udp-socket-recycle.yml
+++ b/CHANGELOG/unreleased/kong/udp-socket-recycle.yml
@@ -1,3 +1,3 @@
-message: "fix a bug causing udp socket leak"
+message: "Fixed the UDP socket leaking issue of the DNS module."
 scope: Core
 type: bugfix
