--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -416,7 +416,10 @@ copyright:
 
 schema-change-noteworthy:
 - changed-files:
-  - any-glob-to-any-file: ['kong/db/schema/**/*.lua', 'kong/**/schema.lua', 'kong/plugins/**/daos.lua', 'plugins-ee/**/daos.lua', 'plugins-ee/**/schema.lua', 'kong/db/dao/*.lua', 'kong/enterprise_edition/redis/init.lua']
+  - any-glob-to-any-file: [
+      'kong/db/schema/**/*.lua', 'kong/**/schema.lua', 'kong/plugins/**/daos.lua', 'plugins-ee/**/daos.lua', 'plugins-ee/**/schema.lua', 'kong/db/dao/*.lua', 'kong/enterprise_edition/redis/init.lua',
+      'kong/llm/init.lua',
+    ]
 
 e2e-api-testing:
 - changed-files:
