chore(cd): build ubuntu jammy artifacts in docker
Prepare self hosted runner to bump to ubuntu 24.04, thus build outside of docker results in artifacts targeting 24.04.

--- a/.github/matrix-full.yml
+++ b/.github/matrix-full.yml
@@ -12,9 +12,11 @@ build-packages:
   package: deb
   check-manifest-suite: ubuntu-20.04-amd64
 - label: ubuntu-22.04
+  image: ubuntu:22.04
   package: deb
   check-manifest-suite: ubuntu-22.04-amd64
 - label: ubuntu-22.04-arm64
+  image: ubuntu:22.04
   package: deb
   bazel-args: --platforms=//:generic-crossbuild-aarch64
   check-manifest-suite: ubuntu-22.04-arm64
