--- a/changelog/unreleased/kong/ai-proxy-azure-streaming.yml
+++ b/changelog/unreleased/kong/ai-proxy-azure-streaming.yml
@@ -1,5 +1,5 @@
 message: |
-  **AI-proxy-plugin**: Fix a bug where certain Azure models would return partial tokens/words 
+  **AI-proxy-plugin**: Fixed a bug where certain Azure models would return partial tokens/words 
   when in response-streaming mode.
 scope: Plugin
 type: bugfix
