--- a/changelog/unreleased/kong/ai-proxy-fix-nil-response-token-count.yml
+++ b/changelog/unreleased/kong/ai-proxy-fix-nil-response-token-count.yml
@@ -1,5 +1,5 @@
 message: |
-  **AI-proxy-plugin**: Fix the bug where using "OpenAI Function" inference requests would log a 
+  **AI-proxy-plugin**: Fixed a bug where using "OpenAI Function" inference requests would log a 
   request error, and then hang until timeout.
 scope: Plugin
 type: bugfix
