--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ mockserver
 # kong
 nginx_tmp/
 kong*.yml
+kong*.yaml
+kong*.yaml.bak*
 
 # luacov
 luacov.*
@@ -49,3 +51,6 @@ bin/h2client
 *.wasm
 spec/fixtures/proxy_wasm_filters/build
 spec/fixtures/proxy_wasm_filters/target
+
+# python
+__pycache__
